Configured docker, docker compose, added basic endpoints

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,5 +22,21 @@ services:
     depends_on:
       - db
 
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    environment:
+      - DB_HOST=db
+      - DB_USER=todo_user
+      - DB_PASSWORD=todo_pass
+      - DB_NAME=todo_db
+      - DB_PORT=5432
+
+
 volumes:
   pgdata:
