--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,8 +16,9 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
+    #reverse proxy
     location / {
-        proxy_pass http://api:8081;
+        proxy_pass http://api:8081; # Forward requests to the API service defined in docker-compose.yml
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
